--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 
         <title>Image zoomer</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Image zoomer</h1>
+        <div class="crosshair"></div>
+        <div class="frame">
+            <img src="img/dok.jpg" alt="sea doc" />
+        </div>
+    </body>
 </html>
