--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Image zoomer</h1>
         <div class="crosshair"></div>
         <div class="frame">
-            <img src="img/dok.jpg" alt="sea doc" />
+            <img src="img/dok.jpg" alt="sea doc" id="hero" />
         </div>
     </body>
 </html>
