Change p inner text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Image zoomer</h1>
-        <p>Click to zoom in for 0.5</p>
+        <p>Click to increase ratio for 0.5</p>
         <div class="crosshair"></div>
         <div class="frame">
             <img src="img/dok.jpg" alt="sea doc" id="hero" />
